<resources>
    <string name="app_name">Movies</string>
    <string name="please_enter_your_email">PLease enter your email</string>
    <string name="please_enter_your_password">PLease enter your password</string>
    <string name="registration">Registration</string>
    <string name="this_is_2nd_activity">this is 2nd activity</string>
    <string name="text">34232514</string>
    <string name="item">Item</string>
    <string name="name_of_the_movie">Name of the movie</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date:</string>
    <string name="_23_june_2001">23 june 2001</string>
    <string name="_7_9">7.9</string>
    <string name="score">Score:</string>
    <string name="overview_">OverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverview</string>
    <string name="movies">Movies</string>

</resources>