<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MoviesDetailsVideoActivity"
    android:background="@color/black">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_primary"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/stencil"
                android:text="@string/movies"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo_file"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="7dp"
        android:id="@+id/movies_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stencil"
        android:text="@string/name_of_the_movie"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/movies_details_header_container_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_details_title">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movies_details_image_banner"
            android:layout_width="525dp"
            android:layout_height="300dp"
            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/movies_body_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardBackgroundColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/movies_details_header_container_card"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movies_details_body_container_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/movies_details_body_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/a_pro_medium"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/movies_details_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/a_pro_medium"
                android:textColor="@color/white"
                android:text="@string/release_date"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movies_details_body_overview_label"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/movies_details_date"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23_june_2001"
                android:textSize="20sp"
                android:fontFamily="@font/a_pro_medium"
                app:layout_constraintStart_toEndOf="@+id/movies_details_date_label"
                app:layout_constraintTop_toTopOf="@+id/movies_details_date_label" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/movies_details_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp"
                android:fontFamily="@font/a_pro_medium"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="@+id/movies_details_date_label"
                app:layout_constraintTop_toBottomOf="@+id/movies_details_date_label" />

            <TextView
                android:fontFamily="@font/a_pro_medium"
                android:id="@+id/movies_details_score"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_9"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/movies_details_score_label"
                app:layout_constraintTop_toTopOf="@+id/movies_details_score_label" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/movies_details_body_overview"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/overview_"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/a_pro_medium"
                app:layout_constraintTop_toBottomOf="@+id/movies_details_score_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>